# youtube_shorts_facts_automation

./: .env.example  .gitignore  LICENSE  README.md  config.json  pipeline.py  pyproject.toml  requirements.txt
utils/: __init__.py  config.py  script_generator.py  video_creator.py
